// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v13-new-workspace-create-application-false-project-then-ng-add it should pass linting when ng-add is run before adding a project 2`] = `
Object {
  "@angular-devkit/build-angular": "^15.0.2",
  "@angular-eslint/builder": "9999.0.1-local-integration-tests",
  "@angular-eslint/eslint-plugin": "9999.0.1-local-integration-tests",
  "@angular-eslint/eslint-plugin-template": "9999.0.1-local-integration-tests",
  "@angular-eslint/schematics": "9999.0.1-local-integration-tests",
  "@angular-eslint/template-parser": "9999.0.1-local-integration-tests",
  "@angular/cli": "~15.0.2",
  "@angular/compiler-cli": "^15.0.0",
  "@types/jasmine": "~4.3.0",
  "@typescript-eslint/eslint-plugin": "5.44.0",
  "@typescript-eslint/parser": "5.44.0",
  "eslint": "^8.28.0",
  "jasmine-core": "~4.5.0",
  "karma": "~6.4.0",
  "karma-chrome-launcher": "~3.1.0",
  "karma-coverage": "~2.2.0",
  "karma-jasmine": "~5.1.0",
  "karma-jasmine-html-reporter": "~2.0.0",
  "typescript": "~4.8.2",
}
`;

exports[`v13-new-workspace-create-application-false-project-then-ng-add it should pass linting when ng-add is run before adding a project 3`] = `
Object {
  "ignorePatterns": Array [
    "projects/**/*",
  ],
  "overrides": Array [
    Object {
      "extends": Array [
        "eslint:recommended",
        "plugin:@typescript-eslint/recommended",
        "plugin:@angular-eslint/recommended",
        "plugin:@angular-eslint/template/process-inline-templates",
      ],
      "files": Array [
        "*.ts",
      ],
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "extends": Array [
        "plugin:@angular-eslint/template/recommended",
      ],
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
  "root": true,
}
`;

exports[`v13-new-workspace-create-application-false-project-then-ng-add it should pass linting when ng-add is run before adding a project 5`] = `
Object {
  "extends": "../../.eslintrc.json",
  "ignorePatterns": Array [
    "!**/*",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "*.ts",
      ],
      "rules": Object {
        "@angular-eslint/component-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "kebab-case",
            "type": "element",
          },
        ],
        "@angular-eslint/directive-selector": Array [
          "error",
          Object {
            "prefix": "app",
            "style": "camelCase",
            "type": "attribute",
          },
        ],
      },
    },
    Object {
      "files": Array [
        "*.html",
      ],
      "rules": Object {},
    },
  ],
}
`;

exports[`v13-new-workspace-create-application-false-project-then-ng-add it should pass linting when ng-add is run before adding a project 6`] = `
Object {
  "builder": "@angular-eslint/builder:lint",
  "options": Object {
    "lintFilePatterns": Array [
      "projects/app-project/**/*.ts",
      "projects/app-project/**/*.html",
    ],
  },
}
`;

exports[`v13-new-workspace-create-application-false-project-then-ng-add it should pass linting when ng-add is run before adding a project 7`] = `
"
Linting \\"app-project\\"...

All files pass linting.
"
`;
